--- a/FlyPal/src/main/webapp/WEB-INF/web.xml
+++ b/FlyPal/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,15 @@
 	<res-auth>Container</res-auth>
   </resource-ref>
   
+    <servlet>
+    <servlet-name>Detail</servlet-name>
+    <jsp-file>/Detail.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Detail</servlet-name>
+    <url-pattern>/detail</url-pattern>
+  </servlet-mapping>
+  
   <servlet>
     <servlet-name>Login</servlet-name>
     <jsp-file>/Login.jsp</jsp-file>
