--- a/FlyPal/src/main/webapp/WEB-INF/web.xml
+++ b/FlyPal/src/main/webapp/WEB-INF/web.xml
@@ -13,8 +13,17 @@
 	<res-type>javax.sql.DataSource</res-type>
 	<res-auth>Container</res-auth>
   </resource-ref>
+
+   <servlet>
+    <servlet-name>Home</servlet-name>
+    <jsp-file>/Home.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Home</servlet-name>
+    <url-pattern>/home</url-pattern>
+  </servlet-mapping>
   
-    <servlet>
+   <servlet>
     <servlet-name>Detail</servlet-name>
     <jsp-file>/Detail.jsp</jsp-file>
   </servlet>
